--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>Мое свободное время</h1>
+    <h1 class="maine">Мое свободное время</h1>
     <ul>
-        <li>
-           Я могу играть в игры 
-        </li>
-        <li>
-я могу гулять 2,5 чяса 
-        </li>
-        <li>
-я могу принемать учястия в играх
-        </li>
+        <h2>
+            <li class="main">
+                Я могу играть в игры
+            </li>
+            <li class="main">
+                я могу гулять 2,5 чяса
+            </li>
+            <li class="main">
+                я могу принемать учястия в играх
+            </li>
+        </h2>
     </ul>
+
 </body>
+
 </html>
